--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "hopeson",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.11.0"
+    "core-js": "^3.35.0",
+    "parcel": "^2.11.0",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.11.0"
